# goit_python_web_hw_06

./: .gitignore  README.md  pyproject.toml  requirements.txt
db/: hw06.sqlite
hw_06/: connection.py  create_db.py  create_tables.py  insert_data.py  main.py  seeds.py  statistic.py
scripts/: docker_run.cmd
sql/: create_table_disciplies.sql  create_table_grade.sql  create_table_groups.sql  create_table_students.sql  create_table_teachers.sql  query_01.sql  query_02.sql  query_03.sql  query_04.sql  query_05.sql  query_06.sql  query_07.sql  query_08.sql  query_09.sql  query_10.sql  query_11.sql  query_12.sql
