[tool.poetry]
name = "goit-python-web-hw-06"
version = "0.1.0"
description = ""
authors = ["lexxai <lexxai@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^19.6.2"
rich = "^13.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
